added press-start-overlay function

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         <!--crt-vfx.css-->
         <div class="crt-scanner"></div>
         <!--crt-vfx.css-->
+        <!--pressStart.js-->
         <div id="press-start-overlay">PRESS START</div>
+        <script src="javascript/pressStart.js"></script>
         <!--navi.css-->
         <nav class="navi-bar crt-text-green">
             <div class="navi-item" data-navi-item="blackboard">
@@ -78,7 +80,6 @@
         <div class="page-container">
 
         </div>
-        <div class="page-container"></div>
     </div>
     <div class="footer">
         <div class="footer-text">&copy; 2026 My CLI | YU Shing Hei</div>
