--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My CLI</title>
-    <link rel="icon" href="./image/favicon.ico">
+    <link rel="icon" href="./images/favicon.ico">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="stylesheets/hud.css">
     <link rel="stylesheet" href="stylesheets/crt-vfx.css">
@@ -15,7 +15,7 @@
 
 <body>
     <div class="header">
-        <img src="./image/banner.png" class="header-img">
+        <img src="./images/banner.png" class="header-img">
         <!--hud.css-->
         <div class="hud-bar">
             <div id="login-status-bar">UID: <div id="login-status-display">Connecting...</div>
@@ -31,8 +31,11 @@
         <!--pressStart.js-->
         <div id="press-start-overlay">PRESS START</div>
         <script src="javascript/pressStart.js"></script>
+        <!--navi.js-->
+        <script src="javascript/navi.js"></script>
         <!--navi.css-->
         <nav class="navi-bar crt-text-green">
+            <div class="navi-mask"></div>
             <div class="navi-item" data-navi-item="blackboard">
                 <div class="navi-item-text">BLACKBOARD</div>
                 <div class="sub-navi-indicator"></div>
@@ -78,7 +81,56 @@
         </nav>
         <div class="sub-navi-indicator-mask"></div>
         <div class="page-container">
-
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
         </div>
     </div>
     <div class="footer">
