--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="stylesheets/crt-vfx.css">
     <link rel="stylesheet" href="stylesheets/navi.css">
     <link rel="stylesheet" href="stylesheets/page.css">
+    <link rel="stylesheet" href="stylesheets/layer.css">
 </head>
 
 <body>
@@ -53,8 +54,8 @@
             </div>
             <div class="navi-item" data-navi-item="walkie-typie">
                 <div class="navi-item-text">WALKIE-TYPIE</div>
-                <div class="sub-navi-indicator"></div>
-                <div class="sub-navi-track">
+                <div class="sub-navi-indicator" style="display: none;"></div>
+                <div class="sub-navi-track" style="display: none;">
                     <div class="sub-navi-item" data-sub-navi-item="walkie-typie-list">
                         <div class="sub-navi-item-text">LIST</div>
                     </div>
@@ -68,8 +69,8 @@
             </div>
             <div class="navi-item" data-navi-item="broadcast">
                 <div class="navi-item-text">BROADCAST</div>
-                <div class="sub-navi-indicator"></div>
-                <div class="sub-navi-track">
+                <div class="sub-navi-indicator" style="display: none;"></div>
+                <div class="sub-navi-track" style="display: none;">
                     <div class="sub-navi-item" data-sub-navi-item="broadcast-signal">
                         <div class="sub-navi-item-text">&lt;--&gt;</div>
                     </div>
