navi and page switch finished

--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
     <div class="body">
         <!--crt-vfx.css-->
         <div class="crt-scanner"></div>
+        <div class="crt-noise-layer"></div>
         <!--crt-vfx.css-->
         <!--pressStart.js-->
         <div id="press-start-overlay">PRESS START</div>
-        <script src="javascript/pressStart.js"></script>
+        <script type="module" src="javascript/pressStart.js"></script>
         <!--navi.css-->
         <nav class="navi-bar crt-text-green">
             <div class="navi-mask"></div>
@@ -86,58 +87,18 @@
         </nav>
         <div class="sub-navi-indicator-mask"></div>
         <!--navi.js-->
-        <script src="javascript/navi.js"></script>
+        <script type="module" src="javascript/navi.js"></script>
         <div class="page-container">
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
+            <div class="page" data-page="blackboard-log">abc</div>
+            <div class="page" data-page="blackboard-todo">def</div>
+            <div class="page" data-page="blackboard-misc"></div>
+            <!---->
+            <div class="page" data-page="walkie-typie-list"></div>
+            <div class="page" data-page="walkie-typie-text"></div>
+            <div class="page" data-page="walkie-typie-add"></div>
+            <!---->
+            <div class="page" data-page="broadcast-channel"></div>
+            <div class="page" data-page="broadcast-list"></div>
         </div>
     </div>
     <div class="footer">
