--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
         <img src="./images/banner.png" class="header-img">
         <!--hud.css-->
         <div class="hud-bar">
-            <div id="login-status-bar">UID: <div id="login-status-display">Connecting...</div>
+            <div id="login-status-bar">UID: <div class="crt-text-orange" id="login-status-display">Connecting...</div>
             </div>
             <div id="db-status-bar">DB: <div id="db-status-display">Connecting...</div>
             </div>
         </div>
+        <!--hud.js-->
+        <script src="./javascript/hud.js"></script>
     </div>
     <div class="body">
         <!--crt-vfx.css-->
