light mode on board

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <div class="header">
-        <img src="./images/banner.png" class="header-img">
+        <img src="./images/banner.png" class="header-img" alt="banner in header">
         <!--hud.css-->
         <div class="hud-bar">
             <div id="login-status-bar">UID: <div class="crt-text-orange" id="login-status-display">Connecting...</div>
@@ -26,6 +26,7 @@
             <div id="db-status-bar">DB: <div id="db-status-display">Connecting...</div>
             </div>
         </div>
+        <button id="theme-change-btn"></button>
         <!--hud.js-->
         <script src="./javascript/hud.js"></script>
     </div>
