list cursor cvs

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -237,6 +237,7 @@
             <script type="module" src="javascript/feature.js"></script>
             <script type="module" src="javascript/feature-shelf.js"></script>
             <script type="module" src="javascript/feature-translator.js"></script>
+            <script type="module" src="javascript/blackboard-vcs.js"></script>
             <!---->
             <!-- <div class="page page-flex-direction-row can-push-pull" data-page="ai-translate">
                 <textarea name="" id="ai-translate-input" placeholder="Enter..."></textarea>
