--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="stylesheets/page-blackboard-log.css">
     <link rel="stylesheet" href="stylesheets/page-ai-translate.css">
     <link rel="stylesheet" href="stylesheets/page-blackboard-vcs.css">
+    <link rel="stylesheet" href="stylesheets/toast.css">
     <link rel="stylesheet" href="stylesheets/@media.css">
 </head>
 
@@ -255,6 +256,7 @@
             <script type="module" src="javascript/feature-shelf.js"></script>
             <script type="module" src="javascript/feature-translator.js"></script>
             <script type="module" src="javascript/blackboard-vcs.js"></script>
+            <script type="module" src="javascript/toast.js"></script>
             <!---->
             <!-- <div class="page page-flex-direction-row can-push-pull" data-page="ai-translate">
                 <textarea name="" id="ai-translate-input" placeholder="Enter..."></textarea>
@@ -275,6 +277,7 @@
             <!---->
             <div class="page" data-page="broadcast-channel">qrs</div>
             <div class="page" data-page="broadcast-list">tuv</div>
+            <div id="toast-container"></div>
         </div>
     </div>
     <div class="footer">
