--- a/frontend/index.html
+++ b/frontend/index.html
@@ -190,13 +190,13 @@
                         </div> -->
                     </div>
                     <div class="vcs-button-container-container">
-                        <div class="vcs-button-container" style="display: none;">
-                            <button class="vcs-btn" id="commit-btn">COMMIT</button>
+                        <div class="vcs-button-container">
+                            <button class=" vcs-btn" id="commit-btn">COMMIT</button>
                             <button class="vcs-btn" id="checkout-btn">CHECKOUT</button>
                         </div>
                         <div class="vcs-button-container">
                             <button class="vcs-btn" id="branch-btn">BRANCH</button>
-                            <button class="vcs-btn" id="wipe-btn">WIPE</button>
+                            <button class="vcs-btn" id="drop-btn">DROP</button>
                         </div>
                     </div>
                 </div>
