timestamp fix again

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,9 +58,9 @@
                         <div class="sub-navi-item" data-sub-navi-item="blackboard-branch">
                             <div class="sub-navi-item-text">BRANCH</div>
                         </div>
-                        <div class="sub-navi-item" data-sub-navi-item="blackboard-stash">
+                        <!-- <div class="sub-navi-item" data-sub-navi-item="blackboard-stash">
                             <div class="sub-navi-item-text">STASH</div>
-                        </div>
+                        </div> -->
                         <div class="sub-navi-item" data-sub-navi-item="auth">
                             <div class="sub-navi-item-text">AUTH</div>
                         </div>
@@ -258,6 +258,7 @@
             <script type="module" src="javascript/feature-translator.js"></script>
             <script type="module" src="javascript/blackboard-vcs.js"></script>
             <script type="module" src="javascript/toast.js"></script>
+            <script type="module" src="javascript/auth.js"></script>
             <!---->
             <!-- <div class="page page-flex-direction-row can-push-pull" data-page="ai-translate">
                 <textarea name="" id="ai-translate-input" placeholder="Enter..."></textarea>
