--- a/frontend/index.html
+++ b/frontend/index.html
@@ -191,6 +191,7 @@
                     </div>
                     <div class="vcs-button-container-container">
                         <div class="vcs-button-container">
+                            <button class="vcs-btn" id="commit-btn">COMMIT</button>
                             <button class="vcs-btn" id="checkout-btn">CHECKOUT</button>
                         </div>
                         <div class="vcs-button-container">
@@ -263,8 +264,6 @@
             <script type="module" src="javascript/feature.js"></script>
             <script type="module" src="javascript/feature-shelf.js"></script>
             <script type="module" src="javascript/feature-translator.js"></script>
-            <script type="module" src="javascript/blackboard-vcs.js"></script>
-            <script type="module" src="javascript/toast.js"></script>
             <script type="module" src="javascript/auth.js"></script>
             <!---->
             <!-- <div class="page page-flex-direction-row can-push-pull" data-page="ai-translate">
