--- a/frontend/index.html
+++ b/frontend/index.html
@@ -195,7 +195,7 @@
                             <button class="vcs-btn" id="checkout-btn">CHECKOUT</button>
                         </div>
                         <div class="vcs-button-container">
-                            <button class="vcs-btn" id="branch-btn">BRANCH</button>
+                            <button class="vcs-btn" id="branch-btn">FORK</button>
                             <button class="vcs-btn" id="drop-btn">DROP</button>
                         </div>
                     </div>
