seems all working

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -245,7 +245,7 @@
                 <div class="auth-container">
                     <div class="auth-title crt-text-orange">ACCOUNT AUTHENTICATION</div>
 
-                    <div class="auth-login-register-container">
+                    <div class="auth-login-register-container" style="display: none;">
                         <input type="text" id="auth-uid" class="auth-input" placeholder="UID" maxlength="64">
                         <input type="password" id="auth-passcode" class="auth-input" placeholder="PASSCODE"
                             maxlength="64">
@@ -256,7 +256,7 @@
                         <button id="btn-reset-passcode" class="auth-btn crt-text-green">RESET PASSCODE</button>
                     </div>
 
-                    <div class="auth-logout-container">
+                    <div class="auth-logout-container" style="display: none;">
                         <div class="auth-user-info-container">Welcome Back, <div id="auth-user-info-uid"></div>
                         </div>
                         <button id="btn-logout" class="auth-btn crt-text-green">LOGOUT</button>
