--- a/frontend/index.html
+++ b/frontend/index.html
@@ -101,9 +101,9 @@
                         <div class="sub-navi-item" data-sub-navi-item="walkie-typie-text">
                             <div class="sub-navi-item-text">TEXT</div>
                         </div>
-                        <div class="sub-navi-item" data-sub-navi-item="walkie-typie-add">
+                        <!-- <div class="sub-navi-item" data-sub-navi-item="walkie-typie-add">
                             <div class="sub-navi-item-text">ADD</div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -305,6 +305,9 @@
                             <div class="walkie-typie-list-uid">uid</div>
                         </div>
                     </div>
+                    <input type="text" id="walkie-typie-add-uid" placeholder="UID" maxlength="64">
+
+                    <button id="walkie-typie-add-btn" class="crt-text-green">ADD</button>
                 </div>
             </div>
             <div class="page" data-page="walkie-typie-text">
@@ -327,7 +330,7 @@
                     <button class="they-pull-btn">PULL</button>
                 </div>
             </div>
-            <div class="page" data-page="walkie-typie-add">
+            <!-- <div class="page" data-page="walkie-typie-add">
                 <div class="walkie-typie-add-container">
                     <div class="walkie-typie-add-title crt-text-orange">WALKIE-TYPIE CONTROLLER</div>
 
@@ -335,7 +338,7 @@
 
                     <button id="btn-add" class="crt-text-green">ADD</button>
                 </div>
-            </div>
+            </div> -->
             <!---->
             <div class="page" data-page="broadcast-channel">qrs</div>
             <div class="page" data-page="broadcast-list">tuv</div>
