it show connected. UNSTABLE

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -280,6 +280,12 @@
             <script type="module" src="javascript/feature-shelf.js"></script>
             <script type="module" src="javascript/feature-translator.js"></script>
             <script type="module" src="javascript/auth.js"></script>
+            <!-- Walkie-Typie Dependencies -->
+            <script src="./javascript/vendor/pusher.min.js"></script>
+            <script src="./javascript/vendor/echo.iife.js"></script>
+            <!-- Walkie-Typie Modules -->
+            <script type="module" src="./javascript/walkie-typie-core.js"></script>
+            <script type="module" src="./javascript/walkie-typie-list.js"></script>
             <!---->
             <!-- <div class="page page-flex-direction-row can-push-pull" data-page="ai-translate">
                 <textarea name="" id="ai-translate-input" placeholder="Enter..."></textarea>
