--- a/frontend/index.html
+++ b/frontend/index.html
@@ -286,6 +286,7 @@
             <!-- Walkie-Typie Modules -->
             <script type="module" src="./javascript/walkie-typie-core.js"></script>
             <script type="module" src="./javascript/walkie-typie-list.js"></script>
+            <script type="module" src="./javascript/walkie-typie-text.js"></script>
             <!---->
             <!-- <div class="page page-flex-direction-row can-push-pull" data-page="ai-translate">
                 <textarea name="" id="ai-translate-input" placeholder="Enter..."></textarea>
